base/elk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk
  annotations:
    linkerd.io/inject: enabled
